# Gaussian_Elimination_GPU

./: README.md
include/JC/: data.hpp  matrix.hpp  openCLHost.hpp  openCLUtil.hpp  util.h
src/: CMakeLists.txt  basicKernels.ocl  optimizedKernels.ocl
src/GaussianEliminationCI/: CMakeLists.txt  GaussianEliminationCI.cpp
src/gaussianElimination/: CMakeLists.txt  gaussianElimination.cpp
src/optimizedGaussianElimination/: CMakeLists.txt  optimizedGaussianElimination.cpp
